--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
         <p>To-Do App</p>
       </div>
       <h1>Acessar</h1>
-      <label>
+      <label for="inputEmail">
         Email:
-        <input id="inputEmail" type="text">
+        <input class="input" id="inputEmail" type="text" required>
       </label>
-      <label>
+      <label for="inputPassword">
         Senha:
-        <input id="inputPassword" type="password">
+        <input class="input" id="inputPassword" type="password" required>
       </label>
 
-      <button type="submit">Acessar</button>
+      <button class="button" type="submit" id="button">Acessar</button>
 
     </form>
     <div class="ingressar">
@@ -45,5 +45,20 @@
   </div>
 
 </body>
+
+<script>
+  let input = document.querySelector(".input");
+  let button = document.querySelector(".button");
+  button.disabled = true;
+  input.addEventListener("change", stateHandle);
+  
+  function stateHandle() {
+      if(document.querySelector(".input").value === "") {
+          button.disabled = true;
+      } else {
+          button.disabled = false;
+      }
+  }
+  </script>
 
 </html>
