--- a/signup.html
+++ b/signup.html
@@ -11,9 +11,8 @@
   <link rel="stylesheet" href="styles/acesso.css">
 
   <!-- ---------------------- lógica aplicada no registro -------------------- -->
-  <script src="/scripts/utils.js"></script>
-  <script src="/scripts/signup.js"></script>
-  <script src="/scripts/script.js"></script>
+  <script src="./scripts/singup.js"></script>
+  <script src="./scripts/index.js"></script>
 </head>
 
 <body>
@@ -28,29 +27,30 @@
       </div>
 
       <label id="label">
-        Nome:*
+        Nome:
         <input type="text"  id="name">
       </label>
       <label id="label">
-        Sobrenome:*
+        Sobrenome:
         <input type="text" id="sub_name">
       </label>
       <label id="label">
-        Email:*
+        Email:
         <input type="email" id="email">
       </label>
       <label id="label">
-        Senha:*
+        Senha:
         <input type="password" id="password">
       </label>
       <label id="label">
-        Repetir senha:*
+        Repetir senha:
         <input type="password" id="confirm_password">
       </label>
       <label id="resultado"><strong></strong></label>
-    </form>
-    <button onclick="Validacoes()" id="confirm" >Criar conta</button>
+      <button onclick="Validacoes()" type="button" id="confirm" >Criar conta</button>
 
+    </form>
+    
     <div class="ingressar">
       <a href="index.html">Já possui conta? Acesse aqui</a>
     </div>
