--- a/tarefas.html
+++ b/tarefas.html
@@ -15,26 +15,23 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- ----------------------------- sweet alert ----------------------------- -->
-  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <!-- CDN example (unpkg) -->
   <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
-
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
-
   <title>To-Do App</title>
 </head>
-
 <body>
+  <script src="./scripts/tarefas.js"></script>
   <header>
     <nav>
       <a href="#">Tarefas</a>
     </nav>
 
     <div class="user-info">
-      <p>Nome usuário</p>
+      <p id="usuario">Nome usuário</p>
       <div class="user-image"></div>
-      <p id="closeApp">Finalizar sessão</i>
+      <p id="closeApp" onclick="logout()">Finalizar sessão</i>
       </p>
     </div>
   </header>
