--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         Senha:
         <input id="inputPassword" onblur="buttonDisable()" type="password">
       </label>
-      <button onclick="push()" type="button" id="acessar">Acessar</button>
+      <button onclick="login()" type="button" id="acessar">Acessar</button>
     </form>
     
     <div class="ingressar">
