--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <label>
         Senha:
         <input id="inputPassword" onblur="buttonDisable()" type="password">
+        <label style="color:red" id="alertPassword"></label>
       </label>
       <button onclick="login()" type="button" id="acessar">Acessar</button>
     </form>
