--- a/tarefas.html
+++ b/tarefas.html
@@ -13,23 +13,24 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+    <script src="./scripts/tarefas.js"></script>
   <!-- ----------------------------- sweet alert ----------------------------- -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <!-- CDN example (unpkg) -->
   <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+   <script src="./scripts/tarefas.js"></script>
   <title>To-Do App</title>
 </head>
-<body>
-  <script src="./scripts/tarefas.js"></script>
+<body onload="usuarioLoad()">
+
   <header>
     <nav>
       <a href="#">Tarefas</a>
     </nav>
 
     <div class="user-info">
-      <p id="usuario">Nome usuário</p>
+      <p id="usuario"></p>
       <div class="user-image"></div>
       <p id="closeApp" onclick="logout()">Finalizar sessão</i>
       </p>
