--- a/tarefas.html
+++ b/tarefas.html
@@ -47,30 +47,9 @@
   </form>
 
 
-  <ul class="tarefas-pendentes">
+  <ul id="tarefas-pendentes"class="tarefas-pendentes">
     <!-- <div id="skeleton"> -->
-    <div>
-      <li class="tarefa">
-        <div class="not-done"></div>
-        <div class="descricao">
-          <p class="nome">Nova tarefa</p>
-          <p class="timestamp">Criada em: 15/07/21</p>
-        </div>
-      </li>
-      <li class="tarefa">
-        <div class="not-done"></div>
-        <div class="descricao">
-          <p class="nome">Nova tarefa</p>
-          <p class="timestamp">Criada em: 15/07/21</p>
-        </div>
-      </li>
-      <li class="tarefa">
-        <div class="not-done"></div>
-        <div class="descricao">
-          <p class="nome">Nova tarefa</p>
-          <p class="timestamp">Criada em: 15/07/21</p>
-        </div>
-      </li>
+    
 
     </div>
   </ul>
