--- a/tarefas.html
+++ b/tarefas.html
@@ -41,20 +41,35 @@
   <form class="nova-tarefa">
     <div class="not-done "></div>
     <input id="novaTarefa" type="text" placeholder="Nova tarefa">
-    <button type="submit">
+    <button type="submit" id="createTaskButton">
       <img src="./assets/plus.png" alt="Adicionar uma nova tarefa">
     </button>
   </form>
 
 
   <ul id="tarefas-pendentes"class="tarefas-pendentes">
-<<<<<<< HEAD
-    <div id="skeleton">
-=======
     <!-- <div id="skeleton"> -->
->>>>>>> c518e54e4f6b1a96137d519f61097bfae3aefcbc
-    
-
+    <li class="tarefa">
+      <div class="not-done"></div>
+      <div class="descricao">
+        <p class="nome">NovaTarefa</p>
+        <p class="timestamp">Criada em: 15/07/21</p>
+      </div>
+    </li>
+    <li class="tarefa">
+      <div class="not-done"></div>
+      <div class="descricao">
+        <p class="nome">NovaTarefa</p>
+        <p class="timestamp">Criada em: 15/07/21</p>
+      </div>
+    </li>
+    <li class="tarefa">
+      <div class="not-done"></div>
+      <div class="descricao">
+        <p class="nome">NovaTarefa</p>
+        <p class="timestamp">Criada em: 15/07/21</p>
+      </div>
+    </li>
     </div>
   </ul>
 
