--- a/tarefas.html
+++ b/tarefas.html
@@ -48,28 +48,28 @@
 
 
   <ul id="tarefas-pendentes"class="tarefas-pendentes">
-    <!-- <div id="skeleton"> -->
-    <li class="tarefa">
-      <div class="not-done"></div>
-      <div class="descricao">
-        <p class="nome">NovaTarefa</p>
-        <p class="timestamp">Criada em: 15/07/21</p>
-      </div>
-    </li>
-    <li class="tarefa">
-      <div class="not-done"></div>
-      <div class="descricao">
-        <p class="nome">NovaTarefa</p>
-        <p class="timestamp">Criada em: 15/07/21</p>
-      </div>
-    </li>
-    <li class="tarefa">
-      <div class="not-done"></div>
-      <div class="descricao">
-        <p class="nome">NovaTarefa</p>
-        <p class="timestamp">Criada em: 15/07/21</p>
-      </div>
-    </li>
+    <div id="skeleton">
+      <li class="tarefa">
+        <div class="not-done"></div>
+        <div class="descricao">
+          <p class="nome">NovaTarefa</p>
+          <p class="timestamp">Criada em: 15/07/21</p>
+        </div>
+      </li>
+      <li class="tarefa">
+        <div class="not-done"></div>
+        <div class="descricao">
+          <p class="nome">NovaTarefa</p>
+          <p class="timestamp">Criada em: 15/07/21</p>
+        </div>
+      </li>
+      <li class="tarefa">
+        <div class="not-done"></div>
+        <div class="descricao">
+          <p class="nome">NovaTarefa</p>
+          <p class="timestamp">Criada em: 15/07/21</p>
+        </div>
+      </li>
     </div>
   </ul>
 
