--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <script src="./scripts/singup.js"></script>
   <script src="./scripts/index.js"></script>
 </head>
+<div id="loading"><img src="./assets/loading.gif"></div>
 <body onload="buttonDisable()">
   <div class="left">
     <img src="./assets/pessoa-login.png" alt="">
