--- a/tarefas.html
+++ b/tarefas.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pt-BR">
 
 <head>
@@ -9,11 +9,13 @@
   <link rel="stylesheet" href="./styles/tarefas.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
+
   <!-- ------------------- Biblioteca de icones - Fontawesome -------------------- -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <script src="./scripts/tarefas.js"></script>
+    <script src="https://rawgit.com/Lautert/helpers/master/javascript.helpers.js"></script>
   <!-- ----------------------------- sweet alert ----------------------------- -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <!-- CDN example (unpkg) -->
@@ -41,40 +43,19 @@
   <form class="nova-tarefa">
     <div class="not-done "></div>
     <input id="novaTarefa" type="text" placeholder="Nova tarefa">
-    <button type="submit" id="createTaskButton">
+    <button onclick="criarTask()" type="button">
       <img src="./assets/plus.png" alt="Adicionar uma nova tarefa">
     </button>
   </form>
+<br>
 
-
+  <h2 class="titulo-terminadas">Tarefas Pendentes</h2>
   <ul id="tarefas-pendentes"class="tarefas-pendentes">
-    <div id="skeleton">
-      <li class="tarefa">
-        <div class="not-done"></div>
-        <div class="descricao">
-          <p class="nome">NovaTarefa</p>
-          <p class="timestamp">Criada em: 15/07/21</p>
-        </div>
-      </li>
-      <li class="tarefa">
-        <div class="not-done"></div>
-        <div class="descricao">
-          <p class="nome">NovaTarefa</p>
-          <p class="timestamp">Criada em: 15/07/21</p>
-        </div>
-      </li>
-      <li class="tarefa">
-        <div class="not-done"></div>
-        <div class="descricao">
-          <p class="nome">NovaTarefa</p>
-          <p class="timestamp">Criada em: 15/07/21</p>
-        </div>
-      </li>
     </div>
   </ul>
 
   <h2 class="titulo-terminadas">Tarefas terminadas</h2>
-  <ul class="tarefas-terminadas">
+  <ul id="tarefas-terminadas"class="tarefas-terminadas">
 
   </ul>
 
